[project]
name = "HackerNews Scraper API"
version = "0.1.0"
description = "Web Scraping API for HackerNews"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastmcp>=3.2.3",
    "httpx>=0.28.1",
    "lxml>=6.0.3",
    "python-dotenv>=1.2.2",
    "urllib3>=2.6.3",
]
